--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,14 @@
 name: Cypress End-to-end tests
-on: push
+on: [push, workflow_dispatch]
 jobs:
-  cypress-run:
-    runs-on: ubuntu-22.04
+  single-run:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Cypress run
         uses: cypress-io/github-action@v6
+        timeout-minutes: 10
         with:
-          build: npm run build
-          start: npm start
+          build: yarn run build
+          start: yarn start
